------------------------------------------------------------
06/24/2023
SQL Scripts
- removed store_number from stores table
- replaced all references of store_number with store_id
REGISTER TERMINAL
- finished login scene
------------------------------------------------------------